--- a/t5mp.vcxproj.filters
+++ b/t5mp.vcxproj.filters
@@ -19,9 +19,6 @@
     <Filter Include="Header Files\GUI">
       <UniqueIdentifier>{eb51e6fa-1ab1-4405-93d5-050227dd15c2}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Header Files\game">
-      <UniqueIdentifier>{c75cd910-2ea1-416b-888a-46e18eec582c}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Source Files\hacks">
       <UniqueIdentifier>{8bd5f205-e5b3-48a7-8698-c8faa0f347cf}</UniqueIdentifier>
     </Filter>
@@ -34,93 +31,90 @@
     <Filter Include="Header Files\others">
       <UniqueIdentifier>{3bfba133-c221-475d-9021-678f5680e39c}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Header Files\sdk">
+      <UniqueIdentifier>{c75cd910-2ea1-416b-888a-46e18eec582c}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="includes.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="controls.hpp">
-      <Filter>Header Files\GUI</Filter>
-    </ClInclude>
-    <ClInclude Include="gui.hpp">
-      <Filter>Header Files\GUI</Filter>
-    </ClInclude>
-    <ClInclude Include="menu.hpp">
-      <Filter>Header Files\GUI</Filter>
-    </ClInclude>
-    <ClInclude Include="math.hpp">
-      <Filter>Header Files\game</Filter>
-    </ClInclude>
-    <ClInclude Include="classes.hpp">
-      <Filter>Header Files\game</Filter>
-    </ClInclude>
-    <ClInclude Include="pointers.hpp">
-      <Filter>Header Files\game</Filter>
-    </ClInclude>
-    <ClInclude Include="engine.hpp">
-      <Filter>Header Files\game</Filter>
-    </ClInclude>
-    <ClInclude Include="options.hpp">
-      <Filter>Header Files\GUI</Filter>
-    </ClInclude>
-    <ClInclude Include="esp.hpp">
-      <Filter>Header Files\hacks</Filter>
-    </ClInclude>
-    <ClInclude Include="tools.hpp">
-      <Filter>Header Files\others</Filter>
-    </ClInclude>
-    <ClInclude Include="aimbot.hpp">
-      <Filter>Header Files\hacks</Filter>
-    </ClInclude>
     <ClInclude Include="hooks.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="globals.hpp">
-      <Filter>Header Files</Filter>
+    <ClInclude Include="menu\controls.hpp">
+      <Filter>Header Files\GUI</Filter>
     </ClInclude>
-    <ClInclude Include="drawing.hpp">
-      <Filter>Header Files</Filter>
+    <ClInclude Include="menu\gui.hpp">
+      <Filter>Header Files\GUI</Filter>
     </ClInclude>
-    <ClInclude Include="misc.hpp">
+    <ClInclude Include="menu\menu.hpp">
+      <Filter>Header Files\GUI</Filter>
+    </ClInclude>
+    <ClInclude Include="cheats\aimbot.hpp">
       <Filter>Header Files\hacks</Filter>
+    </ClInclude>
+    <ClInclude Include="cheats\esp.hpp">
+      <Filter>Header Files\hacks</Filter>
+    </ClInclude>
+    <ClInclude Include="cheats\misc.hpp">
+      <Filter>Header Files\hacks</Filter>
+    </ClInclude>
+    <ClInclude Include="sdk\classes.hpp">
+      <Filter>Header Files\sdk</Filter>
+    </ClInclude>
+    <ClInclude Include="sdk\engine.hpp">
+      <Filter>Header Files\sdk</Filter>
+    </ClInclude>
+    <ClInclude Include="sdk\math.hpp">
+      <Filter>Header Files\sdk</Filter>
+    </ClInclude>
+    <ClInclude Include="sdk\pointers.hpp">
+      <Filter>Header Files\sdk</Filter>
+    </ClInclude>
+    <ClInclude Include="misc\globals.hpp">
+      <Filter>Header Files\others</Filter>
+    </ClInclude>
+    <ClInclude Include="misc\options.hpp">
+      <Filter>Header Files\others</Filter>
+    </ClInclude>
+    <ClInclude Include="misc\tools.hpp">
+      <Filter>Header Files\others</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="controls.cpp">
-      <Filter>Source Files\GUI</Filter>
-    </ClCompile>
-    <ClCompile Include="gui.cpp">
-      <Filter>Source Files\GUI</Filter>
-    </ClCompile>
-    <ClCompile Include="menu.cpp">
-      <Filter>Source Files\GUI</Filter>
-    </ClCompile>
-    <ClCompile Include="window.cpp">
-      <Filter>Source Files\GUI</Filter>
-    </ClCompile>
-    <ClCompile Include="esp.cpp">
-      <Filter>Source Files\hacks</Filter>
-    </ClCompile>
-    <ClCompile Include="tools.cpp">
-      <Filter>Source Files\others</Filter>
-    </ClCompile>
-    <ClCompile Include="options.cpp">
-      <Filter>Source Files\GUI</Filter>
-    </ClCompile>
-    <ClCompile Include="aimbot.cpp">
-      <Filter>Source Files\hacks</Filter>
-    </ClCompile>
     <ClCompile Include="hooks.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="misc.cpp">
+    <ClCompile Include="menu\controls.cpp">
+      <Filter>Source Files\GUI</Filter>
+    </ClCompile>
+    <ClCompile Include="menu\gui.cpp">
+      <Filter>Source Files\GUI</Filter>
+    </ClCompile>
+    <ClCompile Include="menu\menu.cpp">
+      <Filter>Source Files\GUI</Filter>
+    </ClCompile>
+    <ClCompile Include="menu\window.cpp">
+      <Filter>Source Files\GUI</Filter>
+    </ClCompile>
+    <ClCompile Include="cheats\aimbot.cpp">
       <Filter>Source Files\hacks</Filter>
     </ClCompile>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
+    <ClCompile Include="cheats\esp.cpp">
+      <Filter>Source Files\hacks</Filter>
+    </ClCompile>
+    <ClCompile Include="cheats\misc.cpp">
+      <Filter>Source Files\hacks</Filter>
+    </ClCompile>
+    <ClCompile Include="misc\options.cpp">
+      <Filter>Source Files\others</Filter>
+    </ClCompile>
+    <ClCompile Include="misc\tools.cpp">
+      <Filter>Source Files\others</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
